syntax = "proto3";

package rpc;

message ServiceInfo {
    string Name = 1;
    int32 Version = 2;
}

message ServerInfo {
    string Type = 1;
    uint32 ID = 2;
    string IP = 3;
    int32 Port = 4;
    int32 TimeBase = 5;
    repeated ServiceInfo Services = 6;
}

message ServerInfoIDMap {
    map<uint32, ServerInfo> Servers = 1;
}

message RegisterReturn {
    uint32 ID = 1;
    map<string, ServerInfoIDMap> NewServers = 2;
    map<string, ServerInfoIDMap> DownServers = 3;
}

service Cluster {
    rpc Register(stream ServerInfo) returns(stream RegisterReturn){}
    rpc Sync(ServerInfo)returns(RegisterReturn){}
}

